# CoeiroBottle

./: .gitignore  Cargo.toml  README.md  biome.json  bun.lockb  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
crates/assets/: Cargo.toml  build.rs
crates/tauri/: Cargo.toml  tauri.conf.json
crates/tauri/capabilities/: migrated.json
crates/tauri/src/: coeiroink_scraping.rs  lib.rs
crates/tauri/src/commands/: directory_check.rs  fetch_latest_version.rs  get_coeiroink_version.rs  install_coeiroink.rs  mod.rs
src/: App.tsx  index.scss  main.tsx  state.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/src/: lib.rs
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: check_latest_version.rs  check_version.rs  fetch_latest_version.rs  get_coeiroink_version.rs  install_coeiroink.rs  mod.rs
src/@types/tw-neumorphism/: index.d.ts
src/views/: CoeiroinkManager.tsx
src/views/CoeiroinkManager/: Configure.tsx  Index.tsx  Installing.tsx
