[package]
name = "coeirobottle"
version = "0.0.0"
description = "Coeiroink Helper"
authors = ["Nanashi. <https://sevenc7c.com>"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.0.0-beta.7"
reqwest = "0.12.4"
anyhow = "1.0.86"
scraper = "0.19.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
lazy-regex = "3.1.0"
regex = "1.10.4"
cached = { version = "0.51.3", features = ["async"] }
tauri-plugin-store = "2.0.0-beta.8"
windows = { version = "0.57.0", features = ["Win32_Storage_FileSystem"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
