[package]
name = "coeirobottle"
version = "0.0.0"
description = "Coeiroink Helper"
authors = ["Nanashi. <https://sevenc7c.com>"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.0.0-beta.7"
reqwest = "0.12.4"
anyhow = "1.0.86"
scraper = "0.19.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
lazy-regex = "3.1.0"
regex = "1.10.4"
cached = { version = "0.51.3", features = ["async"] }
tauri-plugin-store = "2.0.0-beta.8"
windows = { version = "0.57.0", features = ["Win32_Storage_FileSystem", "Win32_System_Com", "Win32_UI_Shell"] }
strum = { version = "0.26.2", features = ["derive"] }
tempfile = "3.10.1"
tokio = "1.38.0"
futures-util = "0.3.30"
async_zip = { version = "0.0.17", features = ["tokio-fs"] }
futures-io = "0.3.30"
tokio-util = { version = "0.7.11", features = ["compat"] }
futures = "0.3.30"
async-tempfile = "0.5.0"
assets = { path = "./assets" }
fs_extra = "1.3.0"
fs-err = { version = "2.11.0", features = ["tokio"] }
async-walkdir = "1.0.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
